# turbox

./: .env  Bechmarks.txt  LICENSE  README.md  core.py  handlers.py  main.py
app/controllers/: agent_controller.py  base_controller.py  order_controller.py  otp_controller.py  user_controller.py
app/middleware/: auth.py  has.py
app/services/: user_service.py
config/: app.py
core/bootstrap/: __init__.py
core/interface/: response.py
core/routing/: __init__.py  helpers.py  router.py
core/turbox_rust/: Cargo.toml
core/turbox_rust/old_src/: _registry_success.rs  lib copy 2.rs  lib copy 3.rs  lib copy 4.rs  lib copy 5.rs  lib copy 6.rs  lib copy.rs  lib_hyper_1.rs  lib_hyper_2.rs  lib_hyper_rsgi.rs  lib_success.rs  lib_success_1.rs  lib_success_10.rs  lib_success_11.rs  lib_success_12.rs  lib_success_13.rs  lib_success_2.rs  lib_success_3.rs  lib_success_4.rs  lib_success_5.rs  lib_success_6.rs  lib_success_7.rs  lib_success_8.rs  lib_success_9.rs  main.rs
core/turbox_rust/src/: lib.rs
core/turbox_rust/src/core/: mod.rs  request.rs  response.rs  route.rs  server.rs  utils.rs  worker.rs
core/utils/: network.py  security.py  validate.py
core/utils/fs/: manager.py
database/migrations/: create_agents.py  create_orders.py  create_otps.py  create_phones.py  create_providers.py  create_tokens.py  create_users.py
routes/: api.py
